# agent-os

./: ADK_INTEGRATION_SUMMARY.md  CHANGELOG.md  INSTALL.md  MANIFEST.in  README-PLATFORMS.md  config.yml  pyproject.toml  run_tests.py
agent_os/: cli.py  installer.py
github-copilot/prompts/: analyze-product.prompt.md  create-spec.prompt.md  create-tasks.md  execute-task.prompt.md  execute-tasks.md
instructions/core/: analyze-product.md  create-spec.md  create-tasks.md  execute-task.md  plan-product.md
pmssbot/: README.md  install-pmssbot.sh  pmssbot.yml
pmssbot/commands/: create-py-tb-device.md
pmssbot/github-copilot/chatmodes/: pmssbot.chatmode.md
pmssbot/github-copilot/prompts/: create-py-tb-dev.prompt.md
pmssbot/instructions/core/: create-py-tb-device.md
pmssbot/instructions/meta/: post-flight.md  pre-flight.md
qwen-code/commands/: analyze-product.toml  create-spec.toml  create-tasks.toml  execute-task.toml  execute-tasks.toml  plan-product.toml
setup/: base.sh  functions.sh  project.sh
src/: __init__.py  cli.py  installer.py
standards/: tech-stack.md
standards/code-style/: python-style.md
tests/: __init__.py  test_basic.py  test_installer.py
